--- a/app/assets/stylesheets/components/_LoginForm.scss
+++ b/app/assets/stylesheets/components/_LoginForm.scss
@@ -19,7 +19,6 @@
 
     .title {
       font-size: 34px;
-      margin-bottom: 20px;
       text-align: center;
       color: $lightestGray;
       padding: 20px 0;
